--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -5,7 +5,7 @@ about:
   about_item :
   - icon : ti-ruler-pencil # themify icon pack : https://themify.me/themify-icons
     title : the best team
-    content : hhhhhhhhhhhh
+    content : the best best team
 
   - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
     title : We're Professional
