update-text-atomique

--- a/exampleSite/data/en/about.yml
+++ b/exampleSite/data/en/about.yml
@@ -4,7 +4,7 @@ about:
   title : About Us
   about_item :
   - icon : ti-ruler-pencil # themify icon pack : https://themify.me/themify-icons
-    title : the best team
+    title : test atomique
     content : the best best team
 
   - icon : ti-cup # themify icon pack : https://themify.me/themify-icons
